docs(api): update usage docs

--- a/.verb.md
+++ b/.verb.md
@@ -18,24 +18,42 @@
 Install with [npm](https://www.npmjs.com/)
 
 ```
-$ npm install {%= name %} --save
+$ npm install {%= name %} --save-dev
 ```
 
 or install using [yarn](https://yarnpkg.com)
 
 ```
-$ yarn add {%= name %}
+$ yarn add --dev {%= name %}
 ```
 
 ## Usage
 > For more use-cases see the [tests](test.js)
 
 ```js
-const {%= varname %} = require('{%= name %}')
+import start from 'start'
+import reporter from 'start-pretty-reporter'
+import rollup = from '{%= name %}'
+import files from 'start-files'
+import clean from 'start-clean'
+import write from 'start-write'
+import buble from 'rollup-plugin-buble'
+
+export const build = () => start(reporter())(
+  files('build/'),
+  clean(),
+  rollup({
+    entry: './main.js',
+    dest: './build/bundle.js',
+    sourceMap: 'inline',
+    plugins: [buble()]
+  }),
+  write('build/')
+)
+
 ```
 
-## API
-{%= apidocs('index.js') %}
+Config options is directly passed to [rollup][], `rollup.write` and `rollup.generate`. See more documentation on them at [rollup wiki page](https://github.com/rollup/rollup/wiki/JavaScript-API)
 
 {% if (verb.related && verb.related.list && verb.related.list.length) { %}
 ## Related
