docs(update): api docs

--- a/.verb.md
+++ b/.verb.md
@@ -44,16 +44,36 @@ export const build = () => start(reporter())(
   clean(),
   rollup({
     entry: './main.js',
-    dest: './build/bundle.js',
+    targets: [
+      { dest: 'build/index.es6.js', format: 'es' },
+      { dest: 'build/index.js', format: 'cjs' }
+    ],
     sourceMap: 'inline',
     plugins: [buble()]
-  }),
-  write('build/')
+    // or
+    // plugins: ['buble']
+    // or
+    // plugins: [
+    //   'commonjs'
+    //   ['node-resolve', { jsnext: true }]
+    //   ['buble', { target: { node: '4' } }]
+    //   
+    //   // or pass plugin function
+    //   // [buble, { target: { node: '4' } }]
+    // ]
+  })
 )
 
 ```
 
-Config options is directly passed to [rollup][], `rollup.write` and `rollup.generate`. See more documentation on them at [rollup wiki page](https://github.com/rollup/rollup/wiki/JavaScript-API)
+This task uses Rollup but through [rolldown][] API, which gives some advantages to the original Rollup API. So checkout both docs or at least see [rollup wiki page](https://github.com/rollup/rollup/wiki/JavaScript-API).
+
+**Rolldown gives you:**
+
+- better plugins resolving (seems like browserify resolves its transforms from package.json)
+- more configuration options - such as `options.source`, `options.ongenerate` and `options.onwrite`
+- loading configs from `package.json` from your `process.cwd()`
+- and even you can create presets of plugins and configs (shareable configs/presets)
 
 {% if (verb.related && verb.related.list && verb.related.list.length) { %}
 ## Related
